# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cog.toml  devenv.nix  devenv.yaml  secretspec.toml  spec.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml  close-external-prs.yml  release.yml
.sqlx/: query-0249237d4d654ccdd94c8716d1d455ac2edd251243ea3db298136dbfa17719cd.json  query-3510ed94c0aaa58c43fc197c61fa5205db57e0181bc9c3dee6d9130af90c2b47.json  query-4a3d54d3dfcfc9a02c803dd06237dfe7954c0a4dce379a5c3677403c9804e382.json  query-a0dc717fca928f7a457441642e3fefa265cdfe2c40bbeeb0cedb3a710b10e8c3.json
configuration/: base.yaml  configuration.yaml  local.yaml  production.yaml
migrations/: 20260129164217_create_subscription_table.sql  20260211205218_add_status_to_subscriptions.sql  20260211212550_make_status_not_null_in_subscriptions.sql  20260211213444_create_subscription_tokens_table.sql  20260226161335_create_users_table.sql  20260301113403_rename_password_column.sql  20260301121136_add_salt_to_users.sql  20260301220332_remove_salt_from_users.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_status.rs  subscription_token.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/subscriptions/: errors.rs  handlers.rs  helpers.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
(+4 files in other folders)
