[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Rodrigo Lorenzo Leal <code@rlorenzoleal.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
